cmake_minimum_required(VERSION 2.5)
project(my_muduo)

# my_muduo最终编译成so动态库,设置动态库的路径, 放在根目录的lib文件夹下面
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
# 设置调试信息 以及启动c++11语言标准（optional）
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -fPIC")

# 定义参与编译的源代码文件(放在SRC_LIST里了) . 表示当前目录下所有的文件
aux_source_directory(. SRC_LIST)
# 编译生成动态库my_muduo
add_library(my_muduo SHARED ${SRC_LIST})
